Refactor with new template